Add role function
